@@ -287,6 +287,8 @@ Tags:
   is_fundamental(d)                   is d a fundamental discriminant
   is_totient(n)                       is n = euler_phi(x) for some x
   is_lucky(n)                         is n a lucky number
+  is_happy(n)                         if n a happy number, returns height
+  is_happy(n,base,exponent)           if n a S_b_e happy number, returns height
   is_smooth(n,k)                      is n a k-smooth number
   is_rough(n,k)                       is n a k-rough number
   is_powerful(n[,k])                  is n a k-powerful number
