@@ -49,6 +49,8 @@ Revision history for Perl module Math::Prime::Util
     - random_safe_prime               for n-bit safe primes
     - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
     - is_lucky(n)                     predicate for lucky number sieve
+    - is_happy(n)                     if n happy number, returns height of n
+    - is_happy(n,base,exponent)       as above but with given base and power
     - is_smooth(n,k)                  is n a k-smooth number
     - is_rough(n,k)                   is n a k-rough number
     - is_practical(n)                 is n a practical number
